--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                     <li class="nav-link">
                         <a href="#">
-                            <i class='bx bx-bar-chart-alt-2 icon' ></i>
+                            <i class='message-square-dots' ></i>
                             <span class="text nav-text">Revenue</span>
                         </a>
                     </li>
