--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                     <li class="nav-link">
                         <a href="#">
-                            <i class='bx bx-message-square-dots'></i>
+                            <i class='bx bx-message-square-dots icon'></i>
                             <span class="text nav-text">Revenue</span>
                         </a>
                     </li>
