--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
                     <li class="nav-link">
                         <a href="#">
                             <i class='bx bx-message-square-dots icon'></i>
-                            <span class="text nav-text">Revenue</span>
+                            <span class="text nav-text">Chatroom</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
                         <a href="#">
-                            <i class='bx bx-bell icon'></i>
-                            <span class="text nav-text">Notifications</span>
+                            <i class='bx bx-hhd icon'></i>
+                            <span class="text nav-text">Announcements</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
                         <a href="#">
-                            <i class='bx bx-pie-chart-alt icon' ></i>
-                            <span class="text nav-text">Analytics</span>
+                            <i class='bx bx-game icon' ></i>
+                            <span class="text nav-text">Games</span>
                         </a>
                     </li>
 
