--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                     <li class="nav-link">
                         <a href="#">
-                            <i class='bx bx-hhd icon'></i>
+                            <i class='bx bx-bell icon'></i>
                             <span class="text nav-text">Announcements</span>
                         </a>
                     </li>
