--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <li class="nav-link">
                         <a href="#">
                             <i class='bx bx-home-alt icon' ></i>
-                            <span class="text nav-text">Dashboard</span>
+                            <span class="text nav-text">Home</span>
                         </a>
                     </li>
 
@@ -77,8 +77,8 @@
 
                     <li class="nav-link">
                         <a href="#">
-                            <i class='bx bx-wallet icon' ></i>
-                            <span class="text nav-text">Wallets</span>
+                            <i class='bx bx-cog icon' ></i>
+                            <span class="text nav-text">Settings</span>
                         </a>
                     </li>
 
@@ -98,7 +98,7 @@
                         <i class='bx bx-moon icon moon'></i>
                         <i class='bx bx-sun icon sun'></i>
                     </div>
-                    <span class="mode-text text">Dark mode</span>
+                    <span class="mode-text text">Dark</span>
 
                     <div class="toggle-switch">
                         <span class="switch"></span>
@@ -140,9 +140,9 @@ modeSwitch.addEventListener("click" , () =>{
     body.classList.toggle("dark");
     
     if(body.classList.contains("dark")){
-        modeText.innerText = "Light mode";
+        modeText.innerText = "Light";
     }else{
-        modeText.innerText = "Dark mode";
+        modeText.innerText = "Dark";
         
     }
 });
