--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ searchBtn.addEventListener("click" , () =>{
 if (window.matchMedia && 
     window.matchMedia('(prefers-color-scheme: dark)').matches) {
     body.classList.toggle("dark");
+    modeText.innerText = "Light";
 }
 
 modeSwitch.addEventListener("click" , () =>{
