--- a/panel/index.html
+++ b/panel/index.html
@@ -41,14 +41,14 @@
 
                 <ul class="menu-links">
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="#home">
                             <i class='bx bx-home-alt icon' ></i>
                             <span class="text nav-text">Home</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="#chatroom">
                             <i class='bx bx-message-square-dots icon'></i>
                             <span class="text nav-text">Chatroom</span>
                         </a>
@@ -112,6 +112,10 @@
 
     <section class="home">
         <div class="text">Dashboard Sidebar</div>
+    </section>
+  
+    <section class="chatroom">
+        <div class="text">chatroom Sidebar</div>
     </section>
 
     <script>
