--- a/panel/index.html
+++ b/panel/index.html
@@ -137,7 +137,7 @@ toggle.addEventListener("click" , () =>{
 })
       
 home.addEventListener("click" , () =>{
-    body.remove()
+    window.location.replace("http://stackoverflow.com");
 })
       
 searchBtn.addEventListener("click" , () =>{
